--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Gerenciamento de Vendas de Hot-Dog{% endblock %}</title>
-    {% assets "main_css" %}
-        <link rel="stylesheet" href="{{ ASSET_URL }}">
-    {% endassets %}
-    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
+    <link rel="stylesheet" href="{{ vite_asset('main.css') }}">
 </head>
+
 <body>
     {% include 'includes/navbar.html' %}
 
     <div class="container-fluid mt-4">
         {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                <div class="row">
-                    <div class="col-md-12">
-                        {% for category, message in messages %}
-                            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                                {{ message }}
-                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                            </div>
-                        {% endfor %}
-                    </div>
+        {% if messages %}
+        <div class="row">
+            <div class="col-md-12">
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-            {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+        {% endif %}
         {% endwith %}
         {% block content %}{% endblock %}
     </div>
 
-    {% assets "main_js" %}
-        <script src="{{ ASSET_URL }}"></script>
-    {% endassets %}
+    <script src="{{ vite_asset('main.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
+
 </html>
